--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -163,15 +163,15 @@ footer.press {
         margin-top: .9em;
         }
 
-        .external-resource-list {
-          font-size: 30px;
-          padding-left: 45px;
-          padding-bottom: 15px;
+        .external-resource-icon {
+          font-size: 9em;
+          margin-bottom: 10px;
         }
 
-        .glyphicon-share {
-          padding-left: 15px;
+        .external-resource-link {
+          text-align: center;
         }
+
       }
 
       .documentHeader {
@@ -265,18 +265,27 @@ footer.press {
       .thumbnail {
         width: 100%;
         padding: 1em;
+
+        a:first {
+          text-align: center;
+        }
+
+        .external-resource-gallery {
+          font-size: 9em;
+        }
+
+      }
+      .caption {
+        display: inline-block;
+
+        .external-resource-link {
+          text-align: center;
+        }
       }
     }
   }
 
-  .external-resource-gallery {
-    font-size: 40px;
-    padding-left: 75px;
-  }
 
-  #external-resource-gallery-caption {
-    text-align: center;
-  }
 
 }
 ///////////////////////////////////
