wrong pseudo-class selector

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -266,7 +266,7 @@ footer.press {
         width: 100%;
         padding: 1em;
 
-        a:first {
+        a:first-child {
           text-align: center;
         }
 
