Resolves #879 Adds fields for primary editor first and last name
We need to differentiate editors from "creators"/authors.

Because of how rdf works, we can't rely on order in the monograph.editor field.

So, like with "creator" we create first and last name fields for the "primary_editor"
and put the first editor in them, with remaining editors in the (unordered)
"editor" list.

This doesn't yet work with the importer, manual editing would need to happen after
importing a new monograph with multiple editors.

Because editors are not used in file_sets, we don't include this in a construct
like the "stores_creator_name_seperately.rb" file. We just put the fields in
the monograph model.

Right now the only use case is a book with 2 editors. When we get to 3, and if
order matters, we'll need to come up with something else...

--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -30,9 +30,11 @@
         <%= link_to "Manage Monograph and Files", main_app.monograph_show_path(@monograph_presenter.id), class: 'btn btn-primary', id: 'manage-monograph-button' %>
       <% end %>
       <h3><%= @monograph_presenter.creator_given_name %> <%= @monograph_presenter.creator_family_name %><%= contributors_string(@monograph_presenter.contributor) %></h3>
-      <% unless @monograph_presenter.editor.nil? %>
-        <h3>Edited by <%= @monograph_presenter.editor %></h3>
+
+      <% if @monograph_presenter.editors? %>
+        <h3>Edited by <%= @monograph_presenter.editors %></h3>
       <% end %>
+
       <div class="description">
         <%= render_markdown @monograph_presenter.description.first || '' %>
       </div>
