--- a/app/views/press_catalog/_index_header_list_monograph.html.erb
+++ b/app/views/press_catalog/_index_header_list_monograph.html.erb
@@ -1,4 +1,5 @@
 <% # header bar for doc items in index view -%>
+<% presenter = CurationConcerns::MonographPresenter.new(document, current_ability) %>
 <div class="col-sm-9">
   <div class="row documentHeader">
     <div class="col-sm-12">
@@ -7,8 +8,8 @@
         <%= render_markdown link_to_document document, document_show_link_field(document), counter: counter %>
       </h2>
       <h3><%= render_markdown document.creator_given_name || '' %> <%= render_markdown document.creator_family_name || '' %><%= contributors_string(document.contributor) %></h3>
-      <% unless document.editor.nil? %>
-        <h3>Edited by <%= document.editor %></h3>
+      <% if presenter.editors? %>
+        <h3>Edited by <%= presenter.editors %></h3>
       <% end %>
       <p><%= render_markdown document.description.first || '' %></p>
     </div>
