--- a/app/views/curation_concerns/file_sets/show.html.erb
+++ b/app/views/curation_concerns/file_sets/show.html.erb
@@ -48,8 +48,9 @@
             <% if @presenter.monograph.creator_family_name.present? %>
               by <%= @presenter.monograph.creator_given_name %> <%= @presenter.monograph.creator_family_name %><%= contributors_string(@presenter.monograph.contributor) %>
             <% end %>
-            <% if @presenter.monograph.editor.present? %>
-              edited by <%= @presenter.monograph.editor %>
+
+            <% if @presenter.monograph.editors? %>
+              edited by <%= @presenter.monograph.editors %>
             <% end %>
           </h3>
           <br />
