update cozy-sun-bear to HEAD; update epub show page; add icon sets for cozy and modify cozy css vendor file to properly access fonts in the asset pipeline

--- a/app/views/e_pub/show.html.erb
+++ b/app/views/e_pub/show.html.erb
@@ -1,17 +1,17 @@
 <% provide :body do %>
 <div id="epub">
-  <div id="reader" style="width: 400px; height: 400px;"></div>
+  <div id="reader"></div>
   <script type="text/javascript">
     var reader = cozy.reader('reader', { href: "<%= "#{main_app.epub_url}/#{params[:id]}" %>" });
     cozy.control.title({ region: 'top.header.left' }).addTo(reader);
     cozy.control.contents({ region: 'top.toolbar.left' }).addTo(reader);
     cozy.control.widget({
-      region: 'top.toolbar.left',
-      template: `<div class="doi-label"><span data-slot="title"></span></div>`,
-      states: [{
-        stateName: 'doi',
-        title: "DOI: 10.3998/fulcrum.12345"
-      }]
+        region: 'top.toolbar.left',
+        template: `<div class="permalink-label"><span class="u-screenreader">Permalink</span><form><input data-slot="title" type="text" id="permalink" value="" readonly="readonly" onclick="this.select(); document.execCommand('copy');"></form></div>`,
+        states: [{
+            stateName: 'doi',
+            title: "https://doi.org/10.3998/fulcrum.12345"
+        }]
     }).addTo(reader);
     cozy.control.preferences({ region: 'top.toolbar.right' }).addTo(reader);
     // cozy.control.pageFirst({ region: 'left.sidebar' }).addTo(reader);
