--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -419,3 +419,35 @@ footer.press {
     margin-top: 2em;
   }
 }
+///////////////////////////////////
+// EPUB READER - cozy-sun-bear
+///////////////////////////////////
+
+.cozy-container i[class^='icon-'] {
+    font-size: 2rem;
+}
+
+.cozy-container i[class^='icon-chevron-'] {
+    font-size: 2.5em;
+}
+
+.cozy-preferences-modal .button--sm {
+  font-size: 1em;
+}
+
+.cozy-container input[type="radio"] {
+  margin: 7px 7px 0 2em;
+}
+
+.cozy-container legend {
+  font-size: initial;
+  display: block;
+  width: initial;
+  border: initial;
+  margin: 0 20px;
+  font-weight: bold;
+}
+
+.cozy-container {
+
+}
