Resolves #911 Platform Admin Dashboard.

--- a/app/views/dashboard/_home.html.erb
+++ b/app/views/dashboard/_home.html.erb
@@ -1,5 +1,6 @@
 <% repository =  RepositoryPresenter.new(current_user) %>
-<h1>Repository Summary</h1>
+<h1>Home</h1>
+<h3>Fulcrum Summary</h3>
 <table class="table table-striped" summary="Repository Global Stats">
   <tr>
     <th scope="col">Object</th>
