remove epub.js requirement point to correct versions of cozy sun bear main

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
  *= require leaflet_1.0.3
  *= require blacklight_facets
  *= require ableplayer
- *= require cozy
+ *= require cozy-sun-bear-main
  *= require heliotrope
  *= require fulcrum
  *= require themes
