--- a/app/views/dashboard/_publishers.html.erb
+++ b/app/views/dashboard/_publishers.html.erb
@@ -1,19 +1,19 @@
 <% repository =  RepositoryPresenter.new(current_user) %>
 <% publishers =  PublishersPresenter.new(current_user) %>
 <h1>Publishers Summary</h1>
-<table class="table table-striped" summary="Respository Publishers Stats">
+<table id="myTable" class="table table-striped" summary="Respository Publishers Stats">
   <tr>
-    <td></td>
-    <th>Publisher</th>
-    <th>Subdomain</th>
-    <th>Monographs</th>
-    <th>Assets</th>
-    <th>Users</th>
+    <th></th>
+    <th onclick="sortTable(1, false)">Publisher</th>
+    <th onclick="sortTable(2, false)">Subdomain</th>
+    <th onclick="sortTable(3, true)">Monographs</th>
+    <th onclick="sortTable(4, true)">Assets</th>
+    <th onclick="sortTable(5, true)">Users</th>
   </tr>
   <% publishers.all.each do |publisher| %>
     <% if can? :read, publisher %>
       <tr>
-        <td><a href="<%= search_catalog_path("f[press_name_ssim][]" => "#{publisher.name}")%>"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search</a></td>
+        <td><a href="<%= edit_press_path(publisher.id) %>"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a></td>
         <td><%= publisher.name %></td>
         <td><%= link_to publisher.subdomain, "/#{publisher.subdomain}" %></td>
         <td><%= repository.monograph_ids(publisher).count() %>&nbsp;<a href="<%= concern_monographs_new_path %>?press=<%= publisher.subdomain %>"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add</a></td>
@@ -23,3 +23,75 @@
     <% end %>
   <% end %>
 </table>
+<script>
+  function sortTable(n, number) {
+    var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+    table = document.getElementById("myTable");
+    switching = true;
+    //Set the sorting direction to ascending:
+    dir = "asc";
+    /*Make a loop that will continue until
+     no switching has been done:*/
+    while (switching) {
+      //start by saying: no switching is done:
+      switching = false;
+      rows = table.getElementsByTagName("TR");
+      /*Loop through all table rows (except the
+       first, which contains table headers):*/
+      for (i = 1; i < (rows.length - 1); i++) {
+        //start by saying there should be no switching:
+        shouldSwitch = false;
+        /*Get the two elements you want to compare,
+         one from current row and one from the next:*/
+        x = rows[i].getElementsByTagName("TD")[n];
+        y = rows[i + 1].getElementsByTagName("TD")[n];
+        /*check if the two rows should switch place,
+         based on the direction, asc or desc:*/
+        if (dir == "asc") {
+          if (number) {
+            if (parseFloat(x.innerHTML) > parseFloat(y.innerHTML)) {
+              //if so, mark as a switch and break the loop:
+              shouldSwitch= true;
+              break;
+            }
+          } else {
+            if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+              //if so, mark as a switch and break the loop:
+              shouldSwitch= true;
+              break;
+            }
+          }
+        } else if (dir == "desc") {
+          if (number) {
+            if (parseFloat(x.innerHTML) < parseFloat(y.innerHTML)) {
+              //if so, mark as a switch and break the loop:
+              shouldSwitch = true;
+              break;
+            }
+          } else {
+            if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+              //if so, mark as a switch and break the loop:
+              shouldSwitch= true;
+              break;
+            }
+          }
+        }
+      }
+      if (shouldSwitch) {
+        /*If a switch has been marked, make the switch
+         and mark that a switch has been done:*/
+        rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+        switching = true;
+        //Each time a switch is done, increase this count by 1:
+        switchcount ++;
+      } else {
+        /*If no switching has been done AND the direction is "asc",
+         set the direction to "desc" and run the while loop again.*/
+        if (switchcount == 0 && dir == "asc") {
+          dir = "desc";
+          switching = true;
+        }
+      }
+    }
+  }
+</script>
