set default font size for csb in heliotrope

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -423,6 +423,10 @@ footer.press {
 ///////////////////////////////////
 // EPUB READER - cozy-sun-bear
 ///////////////////////////////////
+#epub {
+  font-size: 16px;
+}
+
 .cozy-container i[class^='icon-'] {
     font-size: 2rem !important;
 }
