--- a/app/views/e_pub/show.html.erb
+++ b/app/views/e_pub/show.html.erb
@@ -1,8 +1,17 @@
+<% provide :page_title, @title || "Title" %>
 <% provide :body do %>
 <div id="epub">
   <div id="reader"></div>
   <script type="text/javascript">
     var reader = cozy.reader('reader', { href: "<%= "#{main_app.epub_url}/#{params[:id]}" %>" });
+    cozy.control.widget({
+      region: 'top.header.left',
+      template: `<div class="btn btn-default"><span class="u-screenreader">Close</span><form><input data-slot="title" type="button" id="close" value="" readonly="readonly" onclick='window.location = "<%= "#{@back_link}" %>";'></form></div>`,
+      states: [{
+        stateName: 'close',
+        title: "X"
+      }]
+    }).addTo(reader);
     cozy.control.title({ region: 'top.header.left' }).addTo(reader);
     cozy.control.contents({ region: 'top.toolbar.left' }).addTo(reader);
     cozy.control.widget({
@@ -10,10 +19,10 @@
         template: `<div class="permalink-label"><span class="u-screenreader">Permalink</span><form><input data-slot="title" type="text" id="permalink" value="" readonly="readonly" onclick="this.select(); document.execCommand('copy');"></form></div>`,
         states: [{
             stateName: 'doi',
-            title: "https://doi.org/10.3998/fulcrum.12345"
+            title: "<%= @citable_link %>"
         }]
     }).addTo(reader);
-    cozy.control.preferences({ region: 'top.toolbar.right' }).addTo(reader);
+    cozy.control.preferences({ region: 'top.header.right' }).addTo(reader);
     // cozy.control.pageFirst({ region: 'left.sidebar' }).addTo(reader);
     cozy.control.pagePrevious({ region: 'left.sidebar' }).addTo(reader);
     cozy.control.pageNext({ region: 'right.sidebar' }).addTo(reader);
