Adjust asset button margin-top so wrapping 'Share' button has 3px separation from 'Edit' and 'Back to Monograph' buttons.

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -418,6 +418,10 @@ footer.press {
   .translation, .transcript {
     margin-top: 2em;
   }
+
+  .btn {
+    margin-top: 3px;
+  }
 }
 
 ///////////////////////////////////
