update close widget to work with newer version of cozy-sun-bear; update csb; adjust css for csb close button

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -457,3 +457,7 @@ footer.press {
 .cozy-container form label {
   font-weight: normal;
 }
+
+.cozy-control button.button--sm.cozy-close {
+	padding: .71em 1em;
+}
