--- a/app/views/e_pub/show.html.erb
+++ b/app/views/e_pub/show.html.erb
@@ -6,7 +6,8 @@
     var reader = cozy.reader('reader', { href: "<%= "#{main_app.epub_url}/#{params[:id]}" %>" });
     cozy.control.widget.button({
 	    region: 'top.header.left',
-	    data: { label: 'Close' },
+	    data: { label: '<i class="icon-x oi" data-glyph="x" aria-hidden="true"></i>'},
+	    template: `<button class="button--sm cozy-close" data-toggle="button" data-slot="label"></button>`,
 	    onClick: function() { window.location = "<%= "#{@back_link}" %>"; }
     }).addTo(reader);
     cozy.control.title({ region: 'top.header.left' }).addTo(reader);
