--- a/app/views/hyrax/file_sets/media_display/_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_image.html.erb
@@ -1,5 +1,5 @@
 <% if Hyrax.config.display_media_download_link? && file_set.allow_download? %>
-    <%= link_to main_app.download_path(file_set), target: "_new", title: "Download the full-sized image" do %>
+    <%= link_to hyrax.download_path(file_set), target: "_new", title: "Download the full-sized image" do %>
         <figure>
             <%= image_tag thumbnail_url(file_set),
                           class: "img-responsive",
