--- a/app/views/hyrax/file_sets/media_display/_video.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_video.html.erb
@@ -1,8 +1,8 @@
 <video id="video" preload="auto" data-able-player data-include-transcript="false">
-  <source src="<%= main_app.download_path(file_set, file: 'webm') %>" type="video/webm" />
-  <source src="<%= main_app.download_path(file_set, file: 'mp4') %>" type="video/mp4" />
+  <source src="<%= hyrax.download_path(file_set, file: 'webm') %>" type="video/webm" />
+  <source src="<%= hyrax.download_path(file_set, file: 'mp4') %>" type="video/mp4" />
   <% if @presenter.transcript.present? %>
-    <track kind="captions" src="<%= main_app.download_path(file_set, file: 'vtt') %>" srclang="en" label="English"  />
+    <track kind="captions" src="<%= hyrax.download_path(file_set, file: 'vtt') %>" srclang="en" label="English"  />
   <% end %>
   Your browser does not support the video tag.
 </video>
