--- a/app/views/hyrax/monographs/_show_actions.html.erb
+++ b/app/views/hyrax/monographs/_show_actions.html.erb
@@ -2,14 +2,22 @@
   <div class="form-actions">
     <% if editor %>
       <%= link_to "Edit This #{@presenter.human_readable_type}", edit_polymorphic_path([main_app, @presenter]), class: 'btn btn-default' %>
-      <%= link_to "Attach a File", main_app.new_curation_concerns_file_set_path(@presenter), class: 'btn btn-default' %>
+      <%= link_to "Attach a File", main_app.new_hyrax_file_set_path(@presenter), class: 'btn btn-default' %>
       <%= link_to t("manage_assets.monograph_link_text"), polymorphic_path([main_app, :file_manager, @presenter]), class: 'btn btn-default' %>
       <%= link_to "Publish This #{@presenter.human_readable_type}", [main_app, :publish, @presenter], class: 'btn btn-primary pull-right', data: { confirm: "Publish this #{@presenter.human_readable_type}?" }, method: :post %>
       <%= link_to "Delete This #{@presenter.human_readable_type}", [main_app, @presenter], class: 'btn btn-danger pull-right', data: { confirm: "Delete this #{@presenter.human_readable_type}?" }, method: :delete %>
     <% end %>
+    <%
+=begin %>
+This relies on a *lot* of CurationConcerns code and is apparently different in hyrax
+We don't use this collections in heliotrope at all currently
+We can decide on old CC or Hyrax if we ever decide to actually use them.
     <% if collector %>
       <%= render 'collections/add_to_collection_modal', collectible: @presenter %>
       <%= link_to_select_collection @presenter, class: 'btn btn-default' %>
     <% end %>
+    <%
+=end %>
+
   </div>
 <% end %>
