--- a/fulcrum/_sass/custom.scss
+++ b/fulcrum/_sass/custom.scss
@@ -28,7 +28,7 @@
   padding: .5em;
   background: $accent-color;
   color: $white;
-  border-bottom: 0;  
+  border-bottom: 0;
 }
 
 //// resize navigation menu
@@ -52,6 +52,33 @@
   color: #ffffff;
   background-position: 0;
 }
+
+// video
+.promo {
+  margin-top: 2em;
+}
+
+.video {
+  height: 0;
+  padding-top: 25px;
+  padding-bottom: 67.5%;
+  margin-bottom: 10px;
+  position: relative;
+  overflow: hidden;
+}
+
+.video.widescreen {
+  padding-bottom: 56.34%;
+}
+
+.video embed, .video iframe, .video object, .video video {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
 
 // custom sizing and positioning for icons
 //// 3-things icons
@@ -184,6 +211,9 @@ footer.page-footer {
   }
   #index-banner .section, .parallax-container .section.sponsor {
     top: -5%;
+  }
+  #index-banner .section, .parallax-container .section.phases {
+    top: 0%;
   }
 
 }
