--- a/app/assets/stylesheets/themes.scss
+++ b/app/assets/stylesheets/themes.scss
@@ -2,6 +2,191 @@
 // base classes set in heliotrope.scss
 ///////////////////////////////////////////////
 //
+// ACLS Humanities E-Book
+//
+///////////////////////////////////////////////
+// colors
+$heb-brand-color: #111;
+$heb-accent-color: #d5d6d2;
+$heb-link: red;
+$heb-accent-footer: #989c97;
+
+$heb-accent-link: #989c97;
+
+$heb-grey-1: #d5d6d2;
+$heb-grey-2: #989c97;
+$heb-grey-3: #655a52;
+$heb-white: #fff;
+$heb-black-80: #342f2e;
+
+// typography
+@mixin open-sans {
+  font-family: "open-sans", Helvetica, sans-serif;
+}
+
+.heb {
+
+  // typography
+  @include open-sans;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font-weight: 700;
+  }
+
+  // links
+  a {
+    color: $heb-link;
+  }
+
+  a:hover,
+  a:active {
+    color: $heb-accent-link;
+  }
+
+  // buttons
+
+  #manage-monograph-button {
+    color: $heb-white;
+    background-color: $heb-brand-color;
+    border-color: $heb-brand-color;
+  }
+
+  .btn-default {
+    background-color: $heb-brand-color;
+    border-color: $heb-brand-color;
+    color: $heb-white;
+  }
+
+  .btn-default:hover,
+  .btn-default:active {
+    background-color: $heb-grey-2;
+    border-color: $heb-grey-2;
+    color: $heb-link;
+  }
+
+  // navigation menu
+  .navbar-default .navbar-nav > .open > a,
+  .navbar-default .navbar-nav > .open > a:hover,
+  .navbar-default .navbar-nav > .open > a:focus {
+    background-color: $heb-grey-2;
+  }
+
+  #brand-bar {
+    background-color: $heb-brand-color;
+    border-color: $heb-brand-color;
+
+    .navbar-brand {
+      color: $heb-white;
+    }
+
+    .navbar-nav {
+      a#add-content,
+      a.login,
+      a.user-display-name {
+          color: $heb-accent-color;
+      }
+
+      .open > a,
+      .open > a:focus,
+      .open > a:hover {
+        background-color: $heb-grey-2;
+      }
+    }
+
+    button.search-submit {
+      background-color: $heb-grey-2;
+      border-color: $heb-grey-2;
+      color: $heb-brand-color;
+    }
+
+  }
+
+  // press catalog
+
+  // jumbotron
+  .jumbotron {
+    background-color: $heb-grey-1;
+    font-weight: 200;
+
+    .logo {
+
+      img {
+        width: 150px;
+        margin-right: 3em;
+      }
+
+    }
+
+  }
+
+  .press {
+
+    h2:nth-child(2) {
+      margin-bottom: 1.5em;
+    }
+
+    .document,
+    .documentHeader {
+      margin-bottom: 2em;
+    }
+  }
+
+  // pagination
+
+  .pagination {
+     li a, li span {
+       color: $heb-brand-color;
+     }
+
+     .active>a,
+     .active>a:hover,
+     .active>a:focus,
+     .active>span,
+     .active>span:hover,
+     .active>span:focus {
+       background-color: $heb-brand-color;
+       border-color: $heb-brand-color;
+       color: $heb-white;
+     }
+  }
+
+  //footer
+  footer {
+    a,
+    a:hover,
+    a:active {
+      color: $heb-white;
+    }
+    .press-block-a,
+    .press-block-b {
+      background-color:  $heb-grey-2;
+
+      a,
+      a:hover,
+      a:active {
+        color: $heb-white;
+      }
+
+      img {
+        width: 75px;
+      }
+
+    }
+    .press-block-c {
+      background-color: $heb-brand-color;
+    }
+    .platform {
+      background-color: $heb-black-80;
+    }
+  }
+
+}
+///////////////////////////////////////////////
+//
 // Indiana University Press
 //
 ///////////////////////////////////////////////
