changed css, moved downloads controller, added favicon route

--- a/app/assets/stylesheets/hyrax.scss
+++ b/app/assets/stylesheets/hyrax.scss
@@ -18,3 +18,6 @@
 @import "blacklight_gallery/slideshow";
 @import "blacklight_gallery/osd_viewer";
 @import 'hyrax/hyrax';
+
+@import "curation_concerns/modules/search_results";
+@import "curation_concerns/modules/pagination";
