--- a/app/assets/stylesheets/themes.scss
+++ b/app/assets/stylesheets/themes.scss
@@ -2,6 +2,191 @@
 // base classes set in heliotrope.scss
 ///////////////////////////////////////////////
 //
+// ACLS Humanities E-Book
+//
+///////////////////////////////////////////////
+// colors
+$heb-brand-color: #111;
+$heb-accent-color: #d5d6d2;
+$heb-link: red;
+$heb-accent-footer: #989c97;
+
+$heb-accent-link: #989c97;
+
+$heb-grey-1: #d5d6d2;
+$heb-grey-2: #989c97;
+$heb-grey-3: #655a52;
+$heb-white: #fff;
+$heb-black-80: #342f2e;
+
+// typography
+@mixin open-sans {
+  font-family: "open-sans", Helvetica, sans-serif;
+}
+
+.heb {
+
+  // typography
+  @include open-sans;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font-weight: 700;
+  }
+
+  // links
+  a {
+    color: $heb-link;
+  }
+
+  a:hover,
+  a:active {
+    color: $heb-accent-link;
+  }
+
+  // buttons
+
+  #manage-monograph-button {
+    color: $heb-white;
+    background-color: $heb-brand-color;
+    border-color: $heb-brand-color;
+  }
+
+  .btn-default {
+    background-color: $heb-brand-color;
+    border-color: $heb-brand-color;
+    color: $heb-white;
+  }
+
+  .btn-default:hover,
+  .btn-default:active {
+    background-color: $heb-grey-2;
+    border-color: $heb-grey-2;
+    color: $heb-link;
+  }
+
+  // navigation menu
+  .navbar-default .navbar-nav > .open > a,
+  .navbar-default .navbar-nav > .open > a:hover,
+  .navbar-default .navbar-nav > .open > a:focus {
+    background-color: $heb-grey-2;
+  }
+
+  #brand-bar {
+    background-color: $heb-brand-color;
+    border-color: $heb-brand-color;
+
+    .navbar-brand {
+      color: $heb-white;
+    }
+
+    .navbar-nav {
+      a#add-content,
+      a.login,
+      a.user-display-name {
+          color: $heb-accent-color;
+      }
+
+      .open > a,
+      .open > a:focus,
+      .open > a:hover {
+        background-color: $heb-grey-2;
+      }
+    }
+
+    button.search-submit {
+      background-color: $heb-grey-2;
+      border-color: $heb-grey-2;
+      color: $heb-brand-color;
+    }
+
+  }
+
+  // press catalog
+
+  // jumbotron
+  .jumbotron {
+    background-color: $heb-grey-1;
+    font-weight: 200;
+
+    .logo {
+
+      img {
+        width: 150px;
+        margin-right: 3em;
+      }
+
+    }
+
+  }
+
+  .press {
+
+    h2:nth-child(2) {
+      margin-bottom: 1.5em;
+    }
+
+    .document,
+    .documentHeader {
+      margin-bottom: 2em;
+    }
+  }
+
+  // pagination
+
+  .pagination {
+     li a, li span {
+       color: $heb-brand-color;
+     }
+
+     .active>a,
+     .active>a:hover,
+     .active>a:focus,
+     .active>span,
+     .active>span:hover,
+     .active>span:focus {
+       background-color: $heb-brand-color;
+       border-color: $heb-brand-color;
+       color: $heb-white;
+     }
+  }
+
+  //footer
+  footer {
+    a,
+    a:hover,
+    a:active {
+      color: $heb-white;
+    }
+    .press-block-a,
+    .press-block-b {
+      background-color:  $heb-grey-2;
+
+      a,
+      a:hover,
+      a:active {
+        color: $heb-white;
+      }
+
+      img {
+        width: 75px;
+      }
+
+    }
+    .press-block-c {
+      background-color: $heb-brand-color;
+    }
+    .platform {
+      background-color: $heb-black-80;
+    }
+  }
+
+}
+///////////////////////////////////////////////
+//
 // Indiana University Press
 //
 ///////////////////////////////////////////////
@@ -896,6 +1081,216 @@ $fulcrum-light-2: #bec4cc;
 
 }
 
+///////////////////////////////////////////////
+//
+// NYU Press
+//
+///////////////////////////////////////////////
+// colors
+$nyu-brand-color: #57068c;
+$nyu-brand-accent: #fff;
+$nyu-brand-color-2: #d7d0db;
+$nyu-link: #57068c;
+$nyu-white: #fff;
+$nyu-jumbotron: #f5f5f5;
+$nyu-gray-1: #3f4550;
+$nyu-gray-2: #342f2e;
+
+
+// typography
+@mixin adelle-sans {
+  font-family: "adelle-sans", Helvetica, sans-serif;
+}
+
+.nyupress {
+
+  // typography
+  @include adelle-sans;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font-weight: 600;
+  }
+
+  // links
+  a {
+    color: $nyu-link;
+  }
+
+  a:hover,
+  a:active {
+  }
+
+  // buttons
+  .btn {
+    @include adelle-sans;
+  }
+
+  .btn-default {
+    background-color: $nyu-brand-color;
+    border-color: $nyu-brand-color;
+    color: $nyu-brand-accent;
+  }
+
+  .btn-default:hover,
+  .btn-default:active {
+    background-color: $nyu-brand-color-2;
+    border-color: $nyu-brand-color-2;
+    color: $nyu-brand-color;
+  }
+
+  #manage-monograph-button {
+    color: $nyu-brand-accent;
+    background-color: $nyu-brand-color;
+  }
+
+  #manage-monograph-button:hover,
+  #manage-monograph-button:active {
+    background-color: $nyu-brand-color-2;
+    color: $nyu-brand-color;
+    border-color: $nyu-brand-color-2;
+  }
+
+  // navigation menu
+  .navbar-default .navbar-nav > .open > a,
+  .navbar-default .navbar-nav > .open > a:hover,
+  .navbar-default .navbar-nav > .open > a:focus {
+    background-color: $nyu-brand-accent;
+  }
+
+  #brand-bar {
+    background-color: $nyu-brand-color;
+    height: 65px;
+
+    .container {
+      height: 100%;
+    }
+
+    form.navbar-form {
+      margin-top: 16px;
+    }
+
+    .navbar-brand {
+      color: transparent;
+      width: 350px;
+      margin-top: 11px;
+      background-image: image-url("nyupress.png");
+      background-repeat: no-repeat;
+      display: block;
+    }
+
+    .navbar-nav {
+      a#add-content,
+      a.login,
+      a.user-display-name {
+          color: $nyu-brand-accent;
+      }
+    }
+
+    .navbar-right {
+      padding-top: 9px;
+    }
+
+    button.search-submit {
+      background-color: $nyu-jumbotron;
+      border-color: $nyu-jumbotron;
+      color: $nyu-brand-color;
+    }
+
+  }
+
+  // press catalog
+
+  // jumbotron
+  .jumbotron {
+    background-color: $nyu-jumbotron;
+    padding-top: 20px;
+    padding-bottom: 28px;
+
+    .logo {
+
+      img {
+        display: none;
+      }
+
+    }
+
+  }
+
+  .press {
+
+    h2:nth-child(2) {
+      margin-bottom: 1.5em;
+    }
+
+    .document,
+    .documentHeader {
+      margin-bottom: 2em;
+    }
+  }
+
+  // pagination
+
+  .pagination {
+     li a, li span {
+       color: $nyu-brand-color;
+     }
+
+     .active>a,
+     .active>a:hover,
+     .active>a:focus,
+     .active>span,
+     .active>span:hover,
+     .active>span:focus {
+       background-color: $nyu-brand-color;
+       border-color: $nyu-brand-color;
+       color: $nyu-brand-accent;
+     }
+  }
+
+  //footer
+  footer {
+    a,
+    a:hover,
+    a:active {
+      color: transparent;
+    }
+
+    .press-block-a,
+    .press-block-b {
+      background-color: $nyu-brand-color-2;
+
+      .crop {
+        width: 40px;
+        height: 40px;
+        overflow: hidden;
+
+        img {
+            width: 296px;
+            height: 40px;
+            max-width: initial;
+        }
+      }
+    }
+
+    .press-block-c {
+      background-color: $nyu-brand-color;
+      color: $nyu-brand-accent;
+    }
+
+    .platform {
+      background-color: $nyu-gray-2;
+      a,
+      a:hover,
+      a:active {
+        color: $nyu-brand-accent;
+      }
+    }
+  }
+}
 ///////////////////////////////////////////////
 //
 // Penn State University Press
