--- a/app/views/monograph_catalog/_index_header_list_file_set.html.erb
+++ b/app/views/monograph_catalog/_index_header_list_file_set.html.erb
@@ -6,6 +6,6 @@
       <%= render_markdown link_to_document document, document_show_link_field(document), counter: counter %>
     </h4>
     <% if !document.section_title.blank? %>
-      <p>From <%= render_markdown document.section_title.to_sentence %></p>
+      <p>From <%= render_markdown @monograph_presenter.display_section_titles document.section_title %></p>
     <% end %>
   </div>
