--- a/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
@@ -4,7 +4,12 @@
 <%= presenter.attribute_to_html(:contributor, label: t('contributor'), render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:subjects) %>
 <%= presenter.attribute_to_html(:display_date, render_as: :markdown, label: t('display_date')) %>
-<%= presenter.attribute_to_html(:section_title, label: t('section_title'), render_as: :monograph_facet, monograph_id: presenter.monograph.id, markdown: true) %>
+<%= presenter.attribute_to_html(:section_title,
+                                label: t('section_title'),
+                                render_as: :monograph_facet,
+                                monograph_id: presenter.monograph.id,
+                                markdown: true,
+                                sort_by: presenter.monograph_presenter.ordered_section_titles) %>
 <%= presenter.attribute_to_html(:keywords, render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:content_type, label: t('content_type'), render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:language, render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
