set logo height in generic app

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -469,3 +469,7 @@ footer.press {
 .cozy-container .st-modal button.button--lg {
   font-size: 1.15em !important;
 }
+
+.cozy-control .logo img {
+  height: 54.4px;
+}
