--- a/app/views/hyrax/file_sets/media_display/_audio.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_audio.html.erb
@@ -1,7 +1,7 @@
 <audio id="audio" preload="auto" data-able-player data-include-transcript="false">
   <source src="<%= hyrax.download_path(file_set, file: 'ogg') %>" type="audio/ogg" />
   <source src="<%= hyrax.download_path(file_set, file: 'mp3') %>" type="audio/mpeg" />
-  <% if @presenter.transcript.present? %>
+  <% if file_set.transcript.present? %>
     <track kind="captions" src="<%= hyrax.download_path(file_set, file: 'vtt') %>" srclang="en" label="English"  />
   <% end %>
   Your browser does not support the audio tag.
