--- a/app/views/hyrax/monographs/_show_actions.html.erb
+++ b/app/views/hyrax/monographs/_show_actions.html.erb
@@ -1,23 +1,25 @@
-<% if collector || editor %>
-  <div class="form-actions">
-    <% if editor %>
-      <%= link_to "Edit This #{@presenter.human_readable_type}", edit_polymorphic_path([main_app, @presenter]), class: 'btn btn-default' %>
-      <%= link_to "Attach a File", main_app.new_hyrax_file_set_path(@presenter), class: 'btn btn-default' %>
-      <%= link_to t("manage_assets.monograph_link_text"), polymorphic_path([main_app, :file_manager, @presenter]), class: 'btn btn-default' %>
-      <%= link_to "Publish This #{@presenter.human_readable_type}", [main_app, :publish, @presenter], class: 'btn btn-primary pull-right', data: { confirm: "Publish this #{@presenter.human_readable_type}?" }, method: :post %>
-      <%= link_to "Delete This #{@presenter.human_readable_type}", [main_app, @presenter], class: 'btn btn-danger pull-right', data: { confirm: "Delete this #{@presenter.human_readable_type}?" }, method: :delete %>
+<div class="show-actions">
+  <% if Hyrax.config.analytics? %>
+    <%= link_to "Analytics", presenter.stats_path, id: 'stats', class: 'btn btn-default' %>
+  <% end %>
+  <% if presenter.editor? %>
+    <%= link_to "Edit", edit_polymorphic_path([main_app, presenter]), class: 'btn btn-default' %>
+    <%= link_to "Delete", [main_app, presenter], class: 'btn btn-danger', data: { confirm: "Delete this #{presenter.human_readable_type}?" }, method: :delete %>
+    <% if presenter.member_presenters.size > 1 %>
+      <%= link_to t("hyrax.file_manager.link_text"), polymorphic_path([main_app, :file_manager, presenter]), class: 'btn btn-default' %>
     <% end %>
-    <%
-=begin %>
-This relies on a *lot* of CurationConcerns code and is apparently different in hyrax
-We don't use this collections in heliotrope at all currently
-We can decide on old CC or Hyrax if we ever decide to actually use them.
-    <% if collector %>
-      <%= render 'collections/add_to_collection_modal', collectible: @presenter %>
-      <%= link_to_select_collection @presenter, class: 'btn btn-default' %>
-    <% end %>
-    <%
-=end %>
+ <% end %>
+ <% if presenter.work_featurable? %>
+  <%= link_to "Feature", hyrax.featured_work_path(presenter, format: :json),
+          data: { behavior: 'feature' },
+          class: presenter.display_unfeature_link? ? 'btn btn-default collapse' : 'btn btn-default' %>
 
-  </div>
-<% end %>
+  <%= link_to "Unfeature", hyrax.featured_work_path(presenter, format: :json),
+         data: { behavior: 'unfeature' },
+         class: presenter.display_feature_link? ? 'btn btn-default collapse' : 'btn btn-default' %>
+ <% end %>
+
+ <%= link_to "Publish This #{@presenter.human_readable_type}", [main_app, :publish, @presenter], class: 'btn btn-primary', data: { confirm: "Publish this #{@presenter.human_readable_type}?" }, method: :post %>
+ <!-- COinS hook for Zotero -->
+ <span class="Z3988" title="<%= export_as_openurl_ctx_kev(presenter) %>"></span>
+</div>
