--- a/app/views/hyrax/monographs/show.html.erb
+++ b/app/views/hyrax/monographs/show.html.erb
@@ -1,14 +1,32 @@
 <% provide :page_title, @presenter.page_title %>
-<% provide :page_header do %>
-  <h1><%= @presenter.title %> <span class="human_readable_type">(<%= @presenter.human_readable_type %>)</span></h1>
-<% end %>
+<div itemscope itemtype="http://schema.org/CreativeWork" class="row">
+  <div class="col-xs-12">
+    <header>
+      <%= render 'work_title', presenter: @presenter %>
+    </header>
 
-<% collector = can?(:collect, @presenter) %>
-<% editor    = can?(:edit,    @presenter) %>
+    <span class="state state-<%= @presenter.workflow.state %>"><%= @presenter.workflow.state_label %></span>
+  </div>
+  <div class="col-sm-8">
+    <%= render 'work_description', presenter: @presenter %>
+    <%= render 'relationships', presenter: @presenter %>
+    <%= render 'metadata', presenter: @presenter %>
+  </div>
+  <div class="col-sm-4">
+    <%= render "show_actions", presenter: @presenter %>
+    <%= t('.last_modified', value: @presenter.date_modified) %>
+    <%= render 'representative_media', presenter: @presenter %>
+    <%= render 'social_media' %>
+    <%= render 'citations', presenter: @presenter %>
+  </div>
+</div>
 
-<%= render 'representative_media', presenter: @presenter %>
-<%= render 'sub_brands', presenter: @presenter %>
-<%= render "attributes", presenter: @presenter %>
-<%= render 'related_files', presenter: @presenter %>
-
-<%= render "show_actions", collector: collector, editor: editor%>
+<div class="row">
+  <div class="col-sm-12">
+    <%= render 'items', presenter: @presenter %>
+    <%= render 'workflow_actions_widget', presenter: @presenter %>
+    <%# TODO: we may consider adding these partials in the future %>
+    <%#= render 'sharing_with', presenter: @presenter %>
+    <%#= render 'user_activity', presenter: @presenter %>
+  </div>
+</div>
