Fixes #1017 'Read' link for epubs on the press catalog page

--- a/app/views/press_catalog/_index_header_list_monograph.html.erb
+++ b/app/views/press_catalog/_index_header_list_monograph.html.erb
@@ -29,7 +29,7 @@
   <% if presenter.epub? %>
     <div class="row">
       <div class="col-sm-12">
-        <a class="btn btn-default" href="<%= epub_path(presenter.epub) + '?subdomain=' + presenter.subdomain %>" title="Read <%= presenter.title %>" role="button">Read</a>
+        <a class="btn btn-default" href="<%= epub_path(presenter.epub, publisher: presenter.subdomain) %>" title="Read <%= presenter.title %>" role="button">Read</a>
       </div>
     </div>
     <div class="row">
